BUG FIXED aligned the sign-up-logo and made responsive using d-flex justify-content-center found on the bootstrap page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,7 +307,6 @@ margin-right: 25%;
 
 .sign-up-logo {
     margin-top: 20px;
-    margin-left: 40%;
 }
 
 .sign-up-legend {
